--- a/index.html
+++ b/index.html
@@ -474,7 +474,9 @@
                 <form action="footer-form">
                     <div class="form-mail">
 
-                        <input type="email" name="mail" id="" placeholder="E-mail">
+                        <label for="mail"></label>
+                        <input type="email" name="mail" id="mail" placeholder="E-mail">
+
 
                         <div class="footer-btn-icon">
 
@@ -489,8 +491,6 @@
                             </div>
 
                         </div>
-
-
 
                     </div>
                 </form>
